# pg_infer

./: .gitignore  CLAUDE.md  Cargo.toml  PERFORMANCE_RESULTS.md  PERFORMANCE_VERDICT.md  PG_INFER.md  PG_LARQL.md  README  SECURITY.md  VINDEX.md  benchmark_conservative.sql  benchmark_practical.sql  demo.sql  flake.nix  pg_infer.control  renovate.json
crates/infer-client/: Cargo.toml
crates/infer-client/src/: lib.rs  transport.rs  types.rs
crates/infer-client/tests/: mock_server_integration.rs  test_error_recovery.rs
crates/infer-compute/: Cargo.toml  ROADMAP.md  build.rs
crates/infer-compute/benches/: linalg.rs
crates/infer-compute/csrc/: ternary_dot.c
crates/infer-compute/docs/: quantization-formats.md  shaders.md
crates/infer-compute/docs/adr/: 003-fused-qkv-projection.md  006-dual-path-decode.md  008-kernel-optimization-findings.md  009-activation-mismatch.md  010-partial-rope-rotary-dim.md
crates/infer-compute/examples/: best_multi_layer.rs  best_pipeline.rs  compare_decode.rs  compare_formats.rs  compare_ollama.rs  compare_pipeline.rs  debug_decode_pipeline.rs  demo_architecture.rs  demo_build_q4t.rs  demo_ridge_solve.rs  profile_components.rs  profile_kv_cache.rs  profile_operations.rs  profile_per_layer.rs  profile_q4_attention.rs  profile_q4_basic.rs  test_correctness.rs  test_shaders.rs
crates/infer-compute/src/: backend.rs  lib.rs  pipeline.rs
crates/infer-compute/src/cpu/: mod.rs
crates/infer-compute/src/cpu/ops/: bitlinear_matvec.rs  mod.rs  q4_common.rs  q4k_matvec.rs  q4k_matvec_avx2.rs  q6k_matvec.rs  (+2 more)
crates/infer-compute/src/cuda/: buffers.rs  kernels.rs  mod.rs  ops.rs  prefill.rs
crates/infer-compute/src/metal/: mod.rs  pipeline.rs  prefill.rs  trait_impl.rs
crates/infer-compute/tests/: test_metal_shaders.rs  test_q4_x86_correctness.rs
crates/infer-models/: Cargo.toml  README.md  ROADMAP.md
crates/infer-models/docs/: quantization-formats.md  weight-loading.md
crates/infer-models/docs/adr/: 003-multimodal-config-parsing.md
crates/infer-models/examples/: architecture_demo.rs  demo_loading.rs
crates/infer-models/src/: config.rs  detect.rs  lib.rs  weights.rs
crates/infer-models/src/architectures/: bitnet.rs  cohere.rs  deepseek.rs  deepseek_v4.rs  gemma4.rs  gpt_oss.rs  mixtral.rs  mod.rs  phi.rs  tinymodel.rs
crates/infer-models/src/loading/: gguf.rs  gguf_quantized.rs  mod.rs  safetensors.rs
crates/infer-models/src/quant/: fp8.rs  ggml.rs  mod.rs
pg_infer/: .gitignore  Cargo.toml  DESIGN  README  demo.sql
pg_infer/crates/infer-compute/: PERFORMANCE.md  README.md  ROADMAP.md
pg_infer/crates/infer-compute/benches/: matmul.rs
pg_infer/crates/infer-compute/docs/: decode-pipeline.md
pg_infer/crates/infer-compute/examples/: compare_decode.rs  compare_formats.rs  compare_generation.rs  compare_ollama.rs  compare_pipeline.rs  demo_architecture.rs  demo_basic.rs  profile_bandwidth.rs  profile_full_suite.rs  profile_kernels.rs  profile_new_kernels.rs  profile_per_layer.rs  profile_q8_qkv.rs  profile_raw_dispatch.rs  profile_transpose.rs
pg_infer/crates/infer-compute/src/: backend.rs  lib.rs
pg_infer/crates/infer-compute/tests/: test_correctness.rs  test_metal_shaders.rs  test_q4_x86_correctness.rs
pg_infer/crates/infer-core/: Cargo.toml
pg_infer/crates/infer-core/examples/: bench_graph.rs  edge_demo.rs  graph_demo.rs  serialization_demo.rs
pg_infer/crates/infer-core/tests/: test_python_compat.rs  test_roundtrip.rs  test_schema.rs
pg_infer/crates/infer-inference/: PERFORMANCE.md  README.md  ROADMAP.md
pg_infer/crates/infer-inference/examples/: attention_demo.rs  bench_adaptive_graph.rs  bench_attention.rs  bench_components.rs  bench_ffn_cache.rs  bench_gemma4.rs  bench_generate.rs  bench_guided_walk.rs  bench_layer_graph.rs  bench_seqlen.rs  bench_topk_sweep.rs  bench_walk_inference.rs  debug_gpu_step.rs  debug_q4k.rs  ffn_profile.rs  inference_demo.rs  memory_audit.rs  profile_walk_accuracy.rs  q4k_remote_parity.rs  routing_experiment.rs  speculation_error.rs  test_q4_accuracy.rs  test_q4_projection_cosine.rs  walk_benchmark.rs  walk_boundary_sweep.rs
pg_infer/crates/infer-inference/src/: capture.rs  model.rs  prompt.rs
pg_infer/crates/infer-inference/tests/: test_arch_golden.rs  test_constrained_dispatch.rs  test_expert_dispatch.rs  test_fused_attention.rs  test_generate_q4k_cpu.rs  test_modules.rs  test_walkers.rs
pg_infer/crates/infer-models/: Cargo.toml  PERFORMANCE.md
pg_infer/crates/infer-models/docs/: architecture-trait.md
pg_infer/crates/infer-models/examples/: demo_tensor_keys.rs
pg_infer/crates/infer-models/src/: detect.rs
pg_infer/crates/infer-models/tests/: test_architectures.rs
pg_infer/crates/infer-vindex/: ROADMAP.md
pg_infer/crates/infer-vindex/benches/: extract_throughput.rs  vindex_ops.rs
pg_infer/crates/infer-vindex/docs/: compute-integration.md
pg_infer/crates/infer-vindex/examples/: build_gate_q4.rs  build_up_features.rs  diff_ple_quantization.rs
pg_infer/crates/infer-vindex/src/: describe.rs
pg_infer/crates/infer-vindex/tests/: test_vindex.rs
pg_infer/expected/: pg_infer.out
pg_infer/src/: am.rs  build.rs  error.rs  fn_describe.rs  fn_infer.rs  fn_show.rs  fn_similar.rs  fn_walk.rs  gucs.rs  helpers.rs  lib.rs  model_mgmt.rs  options.rs  page_reader.rs  pages.rs  registry.rs  scan.rs
(+300 files in other folders)
