[package]
name = "pg_infer"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Greg Burd <greg@burd.me>"]
license = "Apache-2.0"
description = "Query transformer model weights as PostgreSQL relations"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_infer"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
# Enable the infer() function.  Pulls in larql-inference which depends on
# wasmtime + protobuf-src (heavy C++ build).
inference = ["dep:larql-inference"]

[dependencies]
pgrx = "0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1.19"
tracing = "0.1"
ndarray = "0.16"
half = "2"

# LARQL dependencies (path to local crates)
larql-vindex = { path = "../_/larql/crates/larql-vindex" }
larql-compute = { path = "../_/larql/crates/larql-compute" }
larql-models = { path = "../_/larql/crates/larql-models" }

# Optional: full inference (forward pass).  Heavy dependency chain.
larql-inference = { path = "../_/larql/crates/larql-inference", optional = true }

[dev-dependencies]
pgrx-tests = "0.17.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
