[package]
name = "infer-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP client for larql-server, used by pg_infer's remote backend"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
bytes = "1"
url = "2"
tracing = "0.1"

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
